--- a/files/service-demo-dev.properties
+++ b/files/service-demo-dev.properties
@@ -1,5 +1,7 @@
 server.port=9013
 
+spring.application.name=service-demo
+
 eureka.instance.preferIpAddress=true
 eureka.client.serviceUrl.defaultZone=http://192.168.179.128:8761/eureka/,http://192.168.179.130:8761/eureka/
 
