--- a/files/config-client-dev.properties
+++ b/files/config-client-dev.properties
@@ -1,1 +1,2 @@
 zuul.routes.api-a.serviceId=service-ribbon
+eureka.client.serviceUrl.defaultZone=http://192.168.179.128:8761/eureka/,http://192.168.179.130:8761/eureka/
